[package]
name = "lust"
version = "2.0.0"
authors = ["Harrison Burt <hburt2003@gmail.com>"]
edition = "2021"
documentation = "getting-started.md"
readme = "README.md"
license = "MIT"
keywords = ["image", "image-server"]
include = ["src/**/*", "Cargo.toml"]
description = "A fast, auto-optimising image server designed for multiple backends with throughput and latency in mind."
[package.metadata.deb]
assets = [
    ["target/release/lust", "usr/bin/", "755"],
    ["lust.service", "lib/systemd/system/", "644"],
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = { version = "*", path = "./webp" }
ravif = { version = "0.11.8" }
rgb = "0.8.44"

tokio = { version = "1", features = ["full"] }
poem-openapi = { version = "5.0.2", features = ["redoc", "uuid", "url", "swagger-ui"] }
poem = { version = "3.0.1", features = ["anyhow"] }
serde = { version = "1.0.204", features = ["derive"] }
mimalloc = { version = "*", default-features = false }
clap = { version = "4.5.9", features = ["derive", "env"] }
strum = { version = "0.26.3", features = ["derive"] }

# Blob storage deps
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
scylla = "0.13.0"
cloud-storage = "0.11.1"

moka = { version = "0.12.8", features = ["sync"] } # or "future"
rayon = "1.5.1"
crc32fast = "1.3.2"
enum_dispatch = "0.3.8"
hashbrown = "0.14.5"
crossbeam = "0.8.1"
tracing = "0.1.30"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.8"
image = "0.25.1"
base64 = "0.22.1"
bytes = "1"
anyhow = "1"
serde_yaml = "0.9.34"
serde_json = "1.0.120"
async-trait = "0.1"
once_cell = "1.10.0"
futures = "0.3"
mime = "0.3.16"
sha2 = "0.10.8"
hex = "0.4"
time = "0.3.36"

[dev-dependencies]
poem = { version = "1.2", features = ["anyhow", "test"] }

# [profile.release]
# lto = "fat"
# codegen-units = 1